// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardContainer test suite should match snapshot when no district data is available 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    districts={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="card-container"
>
          
</div>,
        <div
          className="card-container"
>
          <h2
                    className="card-container-error-message"
          >
                    Oops No District by that name
          </h2>
</div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [],
          "className": "card-container",
        },
        "ref": null,
        "rendered": Array [],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h2
            className="card-container-error-message"
>
            Oops No District by that name
</h2>,
          "className": "card-container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Oops No District by that name",
            "className": "card-container-error-message",
          },
          "ref": null,
          "rendered": "Oops No District by that name",
          "type": "h2",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="card-container"
>
            
</div>,
          <div
            className="card-container"
>
            <h2
                        className="card-container-error-message"
            >
                        Oops No District by that name
            </h2>
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [],
            "className": "card-container",
          },
          "ref": null,
          "rendered": Array [],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h2
              className="card-container-error-message"
>
              Oops No District by that name
</h2>,
            "className": "card-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Oops No District by that name",
              "className": "card-container-error-message",
            },
            "ref": null,
            "rendered": "Oops No District by that name",
            "type": "h2",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`CardContainer test suite should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    districts={
        Array [
            Object {
              "id": 1,
              "location": "The Moon",
              "stats": Object {
                "2002": 1,
                "2003": 6,
                "2004": 8,
                "2005": 0,
              },
            },
            Object {
              "id": 2,
              "location": "The Sun",
              "stats": Object {
                "2002": 1,
                "2004": 8,
                "2007": 6,
                "2009": 0,
              },
            },
            Object {
              "id": 3,
              "location": "Jupiter",
              "stats": Object {
                "2002": 1,
                "2004": 0,
                "2009": 6,
                "2010": 8,
              },
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="card-container"
>
          <Card
                    handleSelectedDistrict={undefined}
                    id={1}
                    location="The Moon"
                    stats={
                              Object {
                                        "2002": 1,
                                        "2003": 6,
                                        "2004": 8,
                                        "2005": 0,
                                      }
                    }
          />
          <Card
                    handleSelectedDistrict={undefined}
                    id={2}
                    location="The Sun"
                    stats={
                              Object {
                                        "2002": 1,
                                        "2004": 8,
                                        "2007": 6,
                                        "2009": 0,
                                      }
                    }
          />
          <Card
                    handleSelectedDistrict={undefined}
                    id={3}
                    location="Jupiter"
                    stats={
                              Object {
                                        "2002": 1,
                                        "2004": 0,
                                        "2009": 6,
                                        "2010": 8,
                                      }
                    }
          />
</div>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Card
              handleSelectedDistrict={undefined}
              id={1}
              location="The Moon"
              stats={
                            Object {
                                          "2002": 1,
                                          "2003": 6,
                                          "2004": 8,
                                          "2005": 0,
                                        }
              }
/>,
            <Card
              handleSelectedDistrict={undefined}
              id={2}
              location="The Sun"
              stats={
                            Object {
                                          "2002": 1,
                                          "2004": 8,
                                          "2007": 6,
                                          "2009": 0,
                                        }
              }
/>,
            <Card
              handleSelectedDistrict={undefined}
              id={3}
              location="Jupiter"
              stats={
                            Object {
                                          "2002": 1,
                                          "2004": 0,
                                          "2009": 6,
                                          "2010": 8,
                                        }
              }
/>,
          ],
          "className": "card-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "handleSelectedDistrict": undefined,
              "id": 1,
              "location": "The Moon",
              "stats": Object {
                "2002": 1,
                "2003": 6,
                "2004": 8,
                "2005": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "handleSelectedDistrict": undefined,
              "id": 2,
              "location": "The Sun",
              "stats": Object {
                "2002": 1,
                "2004": 8,
                "2007": 6,
                "2009": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "function",
            "props": Object {
              "handleSelectedDistrict": undefined,
              "id": 3,
              "location": "Jupiter",
              "stats": Object {
                "2002": 1,
                "2004": 0,
                "2009": 6,
                "2010": 8,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="card-container"
>
            <Card
                        handleSelectedDistrict={undefined}
                        id={1}
                        location="The Moon"
                        stats={
                                    Object {
                                                "2002": 1,
                                                "2003": 6,
                                                "2004": 8,
                                                "2005": 0,
                                              }
                        }
            />
            <Card
                        handleSelectedDistrict={undefined}
                        id={2}
                        location="The Sun"
                        stats={
                                    Object {
                                                "2002": 1,
                                                "2004": 8,
                                                "2007": 6,
                                                "2009": 0,
                                              }
                        }
            />
            <Card
                        handleSelectedDistrict={undefined}
                        id={3}
                        location="Jupiter"
                        stats={
                                    Object {
                                                "2002": 1,
                                                "2004": 0,
                                                "2009": 6,
                                                "2010": 8,
                                              }
                        }
            />
</div>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Card
                handleSelectedDistrict={undefined}
                id={1}
                location="The Moon"
                stats={
                                Object {
                                                "2002": 1,
                                                "2003": 6,
                                                "2004": 8,
                                                "2005": 0,
                                              }
                }
/>,
              <Card
                handleSelectedDistrict={undefined}
                id={2}
                location="The Sun"
                stats={
                                Object {
                                                "2002": 1,
                                                "2004": 8,
                                                "2007": 6,
                                                "2009": 0,
                                              }
                }
/>,
              <Card
                handleSelectedDistrict={undefined}
                id={3}
                location="Jupiter"
                stats={
                                Object {
                                                "2002": 1,
                                                "2004": 0,
                                                "2009": 6,
                                                "2010": 8,
                                              }
                }
/>,
            ],
            "className": "card-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "handleSelectedDistrict": undefined,
                "id": 1,
                "location": "The Moon",
                "stats": Object {
                  "2002": 1,
                  "2003": 6,
                  "2004": 8,
                  "2005": 0,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "function",
              "props": Object {
                "handleSelectedDistrict": undefined,
                "id": 2,
                "location": "The Sun",
                "stats": Object {
                  "2002": 1,
                  "2004": 8,
                  "2007": 6,
                  "2009": 0,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "function",
              "props": Object {
                "handleSelectedDistrict": undefined,
                "id": 3,
                "location": "Jupiter",
                "stats": Object {
                  "2002": 1,
                  "2004": 0,
                  "2009": 6,
                  "2010": 8,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
